test/CheckError/Move/FinalLvalMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	static create = default;
}

export void f() {
	final auto testInstance = TestClass();
	
	// CHECK: .loci:12:34: error: cannot find method 'move' for type 'lval<TestClass>(final_lval_t<TestClass>)'
	unused auto testInstanceMoved = move testInstance;
}

// CHECK: 2 errors generated.
